Fix category filter on mobile

--- a/css/_media_queries.scss
+++ b/css/_media_queries.scss
@@ -23,6 +23,9 @@
           }
         }
       }
+      #category-filter li {
+        width: 100%;
+      }
   }
 }
 
